--- a/contact.html
+++ b/contact.html
@@ -6,12 +6,12 @@
   </head>
   <body>
     <ol>
-      <li>5407506387</li>
-      <li>zfada01@northcross.org</li>
+      <li>540FakePhone</li>
+      <li>notzaid@gmail.org</li>
     </ol>
     <hr />
-    <form action="mailto:zaid.fada@gmail.com" method="post" enctype="
-    ">
+    <form action="mailto:notzaid@gmail.org" method="post" enctype="text/plain"
+    >
       <label>Name:</label>
       <input type="text" name="YourName"><br />
       <label for="">Email:</label>
