--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
           </tr>
   </table>
   <hr />
-  <a href="Hobbies.html">Hobbies
+  <a href="hobbies.html">Hobbies
   </a>
-  <a href="Contact.html">Contact Me
+  <a href="contact.html">Contact Me
   </a>
 </body>
 
